fixes address spacing

--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ License URI:        http://www.opensource.org/licenses/mit-license.php
   you could just enqueue this file (style.css) to the header and add your styles in this file
 
 ---------------------------------------------------------------------------- */
+address {
+  margin: 5% 0 1% 0;
+}
+
 .address-info {
   clear:both;
   height:0;
